--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 </head>
 <body style="background: linear-gradient(to right, #ffcccc, #ffcc99);">
     <div class="navbar">
-        <a class="active" href="#">Home</a>
+        <a class="active" href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact Us</a>
     </div>
