--- a/templates/about.html
+++ b/templates/about.html
@@ -8,6 +8,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #ffffcc; /* Yellow background */
         }
 
         .navbar {
@@ -51,7 +52,7 @@
         }
     </style>
 </head>
-<body style="background: linear-gradient(to right, #ffcccc, #ffcc99);">
+<body>
     <div class="navbar">
         <a href="/">Home</a>
         <a class="active" href="/about">About Project</a>
