updated results and index page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
     <div class="navbar">
         <a href="/">Home</a>
         <a href="/about">About</a>
-        <a class="active" href="/">Contact Us</a>
+        <a class="active" href="/contact">Contact Us</a>
     </div>
 
     <h1>Contact Us</h1>
